teacher crud and service
